Adds related schools and programmes

--- a/rca/project_styleguide/templates/patterns/organisms/school-section-footer/school-section-footer.html
+++ b/rca/project_styleguide/templates/patterns/organisms/school-section-footer/school-section-footer.html
@@ -1,6 +1,6 @@
 {% if links %}
 <div class="section__row">
-    {% include "patterns/organisms/related-links/related-links.html" with related_links=links title=page.external_links_heading %}
+    {% include "patterns/organisms/related-links/related-links.html" with related_links=links title=links_heading %}
 </div>
 {% endif %}
 
