--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -204,7 +204,7 @@
                 </div>
                 {% endif %}
 
-                {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=page.external_links cta=page.research_cta_block %}
+                {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=page.external_links cta=page.research_cta_block links_heading=page.external_links_heading %}
                 <div class="section__notch">
                     <div class="section__notch-fill section__notch-fill--third-col"></div>
                 </div>
@@ -212,49 +212,54 @@
             </section>
 
             {# Programmes #}
-            <section class="schools__programmes section section--start bg bg--light anchor-heading" id="programmes-short-courses">
-                <div class="section__row section__row--last-small">
-                    <div class="section__header grid">
-                        <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">
-                            {{ page.sections.programmes.title|default:"Our programmes" }}
-                        </h2>
-                        {% if page.sections.programmes.introduction %}
-                            <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
-                                {{ page.sections.programmes.introduction }}
+            {% if related_programmes or related_short_courses %}
+                <section class="schools__programmes section section--start bg bg--light" id="programmes-short-courses">
+                    {% if related_programmes %}
+                        <div class="section__row section__row--last-small">
+                            <div class="section__header grid">
+                                <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">
+                                    {{ page.related_programmes_title|default:"Our programmes" }}
+                                </h2>
+                                {% if page.related_programmes_summary %}
+                                    <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
+                                        {{ page.related_programmes_summary }}
+                                    </div>
+                                {% endif %}
                             </div>
-                        {% endif %}
-                    </div>
-                    <div class="section__content">
-                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title=False related_sections=programmes modifier="after-action related-content--meta-new-line related-content--large related-content--sticky" %}
-                    </div>
-                </div>
-                <div class="section__row">
-                    <div class="section__header grid">
-                        <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">
-                            {{ page.sections.short_courses.title|default:"Our short courses" }}
-                        </h2>
-                        {% if page.sections.short_courses.introduction %}
-                            <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
-                                {{ page.sections.short_courses.introduction }}
+                            <div class="section__content">
+                                {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=related_programmes title=False modifier="after-action related-content--meta-new-line related-content--large related-content--sticky" %}
                             </div>
-                        {% endif %}
+                        </div>
+                    {% endif %}
+                    {% if related_short_courses %}
+                        <div class="section__row">
+                            <div class="section__header grid">
+                                <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">
+                                    {{ page.related_short_courses_title|default:"Our short courses" }}
+                                </h2>
+                                {% if page.related_short_courses_introduction %}
+                                    <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
+                                        {{ page.related_short_courses_introduction }}
+                                    </div>
+                                {% endif %}
+                            </div>
+                            <div class="section__content">
+                                {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=related_short_courses title=False modifier="after-action related-content--meta-new-line" %}
+                            </div>
+                        </div>
+                    {% endif %}
+
+                    {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=page.programmes_external_links cta=page.programmes_cta_block links_heading=page.programmes_links_heading %}
+
+                    <div class="section__notch">
+                        <div class="section__notch-fill section__notch-fill--third-col"></div>
                     </div>
-                    <div class="section__content">
-                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title=False related_sections=short_courses modifier="after-action related-content--meta-new-line" %}
-                    </div>
-                </div>
-
-                {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=programmes_links  cta=programmes_cta %}
-
-                <div class="section__notch">
-                    <div class="section__notch-fill section__notch-fill--third-col"></div>
-                </div>
+                </section>
+            {% endif %}
 
 
-            </section>
-
-            {# Staff #} 
-            <section class="schools__staff section section--start section--end bg bg--dark anchor-heading" id="staff">
+            {# Staff #}
+            <section class="schools__staff section section--start section--end bg bg--dark" id="staff">
 
                 <div class="section__row {% if staff_links or staff_cta %}section__row--last-small{% else %}section__row--last-large{% endif %}">
                     <div class="section__header section__header--bottom-space grid">
