--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
@@ -1,4 +1,4 @@
-{% if related_schools or research_centres or areas %}
+{% if related_schools or research_centres or areas or directorates %}
     <div class="key-details key-details--staff">
         <div class="key-details__header">
             <h3 class="heading heading--five key-details__heading">Key details</h3>
@@ -21,29 +21,23 @@
                         </li>
                         {% endfor %}
                     {% endif %}
+                    {% if directorates %}
+                        {% for item in directorates %}
+                            <li class="key-details__list-item">
+                                {# Link here depends on the staff picker page #}
+                                <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
+                            </li>
+                        {% endfor %}
+                    {% endif %}
                 </ul>
             </div>
         {% endif %}
-        
+
         {% if areas %}
             <div class="key-details__section key-details__section--expertise">
                 <h4 class="body body--two key-details__sub-heading">Expertise</h4>
                 <ul class="key-details__list">
                     {% for item in areas %}
-                        <li class="key-details__list-item">
-                        {# Link here depends on the staff picker page #}
-                            <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
-
-        {% if directorates %}
-            <div class="key-details__section key-details__section--expertise">
-                <h4 class="body body--two key-details__sub-heading">Area</h4>
-                <ul class="key-details__list">
-                    {% for item in directorates %}
                         <li class="key-details__list-item">
                         {# Link here depends on the staff picker page #}
                             <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
