--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
@@ -3,7 +3,7 @@
         <div class="key-details__header">
             <h3 class="heading heading--five key-details__heading">Key details</h3>
         </div>
-        {% if related_schools or research_centres %}
+        {% if related_schools or research_centres or directorates %}
             <div class="key-details__section key-details__section--school">
                 <h4 class="body body--two key-details__sub-heading">School, Centre or Area</h4>
                 <ul class="key-details__list">
