--- a/rca/project_styleguide/templates/patterns/molecules/job-titles/job-titles.html
+++ b/rca/project_styleguide/templates/patterns/molecules/job-titles/job-titles.html
@@ -4,13 +4,15 @@
             {% for role in group.items %}
                 <li class="job-titles__title">{{ role }}</li>
             {% endfor %}
-            <li class="job-titles__department">
-            {% if group.link %}
-                <a class="body body--two link link--tertiary" href="{{ group.link }}">{{ group.label }}</a>
-            {% else %}
-                <p class="body body--two link">{{ group.label }}</p>
+            {% if group.link or ground.label %}
+                <li class="job-titles__department">
+                {% if group.link %}
+                    <a class="body body--two link link--tertiary" href="{{ group.link }}">{{ group.label }}</a>
+                {% else %}
+                    <p class="body body--two link">{{ group.label }}</p>
+                {% endif %}
+                </li>
             {% endif %}
-            </li>
         </ul>
     {% endfor %}
 </div>
