--- a/rca/static_src/sass/components/_staff-body.scss
+++ b/rca/static_src/sass/components/_staff-body.scss
@@ -21,4 +21,10 @@
             grid-column: 5 / span 1;
         }
     }
+
+    &__action {
+        @include media-query(large) {
+            padding-top: ($gutter * 2);
+        }
+    }
 }
