--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -24,7 +24,7 @@
                     <nav class="title-area__breadcrumb" aria-label="Breadcrumb">
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" %}
                     </nav>
-                    {% if page.staff_title or page.first_name or last_name %}
+                    {% if page.staff_title or page.first_name or page.last_name %}
                         <h1 property="schema:name" class="title-area__heading heading heading--one">
                             {% if page.staff_title %}
                                 <span class="title-area__profile-title heading heading--three">{{ page.staff_title }}</span>
