--- a/rca/project_styleguide/templates/patterns/pages/forms/thanks.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/thanks.html
@@ -3,13 +3,41 @@
 
 {% block content %}
 
-    <div class="page">
+    <div class="page page--no-hero">
+
         <div class="page__header bg bg--dark">
             <h1 class="heading heading--display-two">{{ page.title }}</h1>
             {% if page.introduction %}<p class="introduction">{{ page.introduction }}</p>{% endif %}
         </div>
+
         <div class="page__content">
-            
+
+            <section class="section section--start bg bg--dark">
+
+                {% if about_teasers %}
+                <div class="section__row section__row--last">
+                    <div class="section__header section__header--bottom-space grid">
+                        <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">{{ page.sections.about.title|default:"Find out more" }}</h2>
+                        {% if page.sections.about.introduction %}
+                            <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
+                                {{ page.sections.about.introduction }}
+                            </div>
+                        {% endif %}
+                    </div>
+                    <div class="section__content grid">
+                        {% include "patterns/organisms/staggered-cards/staggered-cards.html" with staggered_cards=about_teasers modifier="no-margin" %}
+                    </div>
+                </div>
+                {% endif %}
+
+                {% if cta %}
+                <div class="section__row section__row--last">
+                    {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=cta %}
+                </div>
+                {% endif %}
+
+            </section>
+
         </div>
     </div>
 
