Remove no margin class

--- a/rca/project_styleguide/templates/patterns/pages/forms/thanks.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/thanks.html
@@ -38,7 +38,7 @@
                         {% endif %}
                     </div>
                     <div class="section__content grid">
-                        {% include "patterns/organisms/staggered-cards/staggered-cards.html" with staggered_cards=page.teasers.items modifier="no-margin" %}
+                        {% include "patterns/organisms/staggered-cards/staggered-cards.html" with staggered_cards=page.teasers.items %}
                     </div>
                 </div>
                 {% endif %}
