--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -74,8 +74,7 @@
                         </div>
                     </div>
                 </div>
-
-                {% if page.research_highlights %}
+                {% if research_highlights %}
                     <div class="section__row {% if page.gallery %}section__row--last{% else %}section__row--last-large{% endif %} research-highlights">
                         <div class="section__header grid">
                             {% if page.research_highlights_title %}
