--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -172,7 +172,7 @@
         }
 
         &--drawer {
-            transition: transform $cubic-transition;
+            transition: transform $transition-cubic;
             position: absolute;
             top: 0;
             right: 0;
