--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -140,7 +140,7 @@ $mini-header-height: 80px;
 // --------------------------------- Transitions --------------------------------------
 
 $transition: 0.25s ease-out;
-$cubic-transition: 250ms cubic-bezier(0.24, 0.26, 0.2, 1);
+$transition-cubic: 250ms cubic-bezier(0.24, 0.26, 0.2, 1);
 
 // --------------------------------- Custom properties --------------------------------------
 
