--- a/rca/project_styleguide/templates/patterns/atoms/form-input/form-input.html
+++ b/rca/project_styleguide/templates/patterns/atoms/form-input/form-input.html
@@ -7,12 +7,12 @@
             </div>
         {% endif %}
 
-        <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">
+        <label for="{{ field.id_for_label }}" class="form-item__label">
             {{ field.label }}
             {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
         </label>
 
-        <input class="form-item__input" type="input" id="{{ field.id_for_label }}" data-focus>
+        <input class="form-item__input" type="input" id="{{ field.id_for_label }}" {% if field.field.required %}required{% endif %} data-focus>
 
     </div>
 
