--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -39,6 +39,7 @@
 @import 'components/contact-anchor';
 @import 'components/image-video-block';
 @import 'components/disclaimer';
+@import 'components/exceptional-cta';
 @import 'components/facilities';
 @import 'components/feature-image';
 @import 'components/featured-alumni';
