Ensure if exception cta is a button that it has a cursor

--- a/rca/static_src/sass/components/_exceptional-cta.scss
+++ b/rca/static_src/sass/components/_exceptional-cta.scss
@@ -12,6 +12,7 @@
     background-color: transparent;
     width: 100%;
     text-align: left;
+    cursor: pointer;
     transition: border-color $transition;
 
     @include media-query(medium) {
