Contact positioning tweaks

--- a/rca/static_src/sass/components/_contact-anchor.scss
+++ b/rca/static_src/sass/components/_contact-anchor.scss
@@ -10,4 +10,8 @@
     @include media-query(large) {
         top: -259px; // height of tabs + inverted notch
     }
+
+    &.anchor-heading {
+        top: 0;
+    }
 }
