--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -195,10 +195,10 @@
                     </div>
                     <div class="section__content">
                         <div class="u-small-and-medium-bp-only">
-                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=research_collaboration.slides datatag="data-logo-carousel" per_slide=2 %}
+                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=research_collaboration datatag="data-logo-carousel" per_slide=2 %}
                         </div>
                         <div class="u-large-bp-only">
-                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=research_collaboration.slides datatag="data-logo-carousel" per_slide=3 %}
+                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=research_collaboration datatag="data-logo-carousel" per_slide=3 %}
                         </div>
                     </div>
                 </div>
